--- a/app/partials/directives/tagCloud.html
+++ b/app/partials/directives/tagCloud.html
@@ -1,4 +1,4 @@
-<div class="chart-options pull-right">
+<!-- <div class="chart-options pull-right">
     <a class="btn btn-lg text-muted collapsed" data-toggle="collapse" data-target=".{{uniqueChartOptions}} .tag-cloud-options" data-animation=false
       ng-click="toggleOptionsDisplay()">
       <span class="glyphicon glyphicon-cog"></span>
@@ -6,34 +6,36 @@
     </a>
     <div class="popover bottom tag-cloud-options">
         <div class="arrow"></div>
-        <div class="popover-content">
+        <div class="popover-content"> -->
+        <options-menu>
             <div class="form-group">
                 <label>Table</label>
-                <select class="form-control" ng-model="selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFieldsAndQueryForTags()">
+                <select class="form-control" ng-model="options.selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFieldsAndQueryForTags()">
                 </select>
             </div>
             <div class="form-group">
                 <label>Tag Field</label>
-                <select class="form-control" ng-model="tagField" ng-options="field for field in fields" ng-required="true" ng-disabled="(fields.length == 0)" ng-change="queryForTags()">
+                <select class="form-control" ng-model="options.tagField" ng-options="field for field in fields" ng-required="true" ng-disabled="(fields.length == 0)" ng-change="queryForTags()">
                 </select>
             </div>
             <div class="form-group" ng-class="{true: '', false: 'hidden'}[showFilter]">
                 <label>Show records with</label>
                 <div class="btn-group">
-                    <label class="btn btn-default" ng-class="{true: 'active', false: ''}[andTags]">
-                        <input type="radio" ng-model="andTags" style="display:none" ng-value="true">
+                    <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.andTags]">
+                        <input type="radio" ng-model="options.andTags" style="display:none" ng-value="true">
                         All filters
                     </label>
-                    <label class="btn btn-default" ng-class="{true: '', false: 'active'}[andTags]">
-                        <input type="radio" ng-model="andTags" style="display:none" ng-value="false"> 
+                    <label class="btn btn-default" ng-class="{true: '', false: 'active'}[options.andTags]">
+                        <input type="radio" ng-model="options.andTags" style="display:none" ng-value="false"> 
                         Any filters
                     </label>
                 </div>
                 <div class="clearfix"></div>
             </div>
-        </div>
+        </options-menu>
+<!--         </div>
     </div>
-</div>
+</div> -->
 
 <div class="pull-left ng-hide" ng-show="(filterTags.length <= 0) && (data.length <= 0)">
     <strong><span class="text-primary">Tag Cloud:</span></strong> No available tag data.
