--- a/app/partials/directives/optionsMenu.html
+++ b/app/partials/directives/optionsMenu.html
@@ -1,10 +1,10 @@
 <div class="chart-options pull-right">
-    <a class="btn btn-lg text-muted collapsed" data-toggle="collapse" data-target=".{{uniqueVisualizationOptions}}" data-animation=false
-      ng-click="toggleOptionsDisplay()">
-      <span class="glyphicon glyphicon-cog"></span>
-      <span class="caret"></span>
+    <a class="btn btn-lg collapsed" data-toggle="collapse" data-target=".{{uniqueVisualizationOptions}} .popover" data-animation=false ng-click="toggleOptionsDisplay()">
+        <span class="header-text" ng-show="showButtonText()">{{getButtonText()}}</span>
+        <span class="glyphicon glyphicon-cog"></span>
+        <span class="caret"></span>
     </a>
-    <div class="popover bottom visualization-options">
+    <div class="popover bottom">
         <div class="arrow"></div>
         <div class="popover-content" ng-transclude>
         </div>
