--- a/client/app/app.less
+++ b/client/app/app.less
@@ -417,34 +417,33 @@
 }
 
 /* injector:less */
-@import "errorStyle.less";
+@import "app.less";
+@import "errorNotification.less";
 @import "fonts.less";
-@import "popupStyle.less";
-@import "style.less";
-@import "directives/addVisualization.less";
-@import "directives/barchart.less";
-@import "directives/circularHeatChart.less";
-@import "directives/circularHeatForm.less";
-@import "directives/countBy.less";
-@import "directives/databaseConfig.less";
-@import "directives/directedGraph.less";
-@import "directives/filterBuilder.less";
-@import "directives/filterState.less";
-@import "directives/filterTray.less";
-@import "directives/gantt-chart.less";
-@import "directives/importFile.less";
-@import "directives/linechart.less";
-@import "directives/map.less";
-@import "directives/newsfeed.less";
-@import "directives/plotlyGraph.less";
-@import "directives/poweredByNeon.less";
-@import "directives/queryResultsTable.less";
-@import "directives/sample.less";
-@import "directives/stackedBarChart.less";
-@import "directives/sunburst.less";
-@import "directives/tagCloud.less";
-@import "directives/timelineSelector.less";
-@import "directives/timelineSelectorChart.less";
-@import "directives/translationOptions.less";
-@import "directives/visualizationWidget.less";
+@import "main/main.less";
+@import "popup.less";
+@import "../components/addVisualization/addVisualization.less";
+@import "../components/aggregationTable/aggregationTable.less";
+@import "../components/barChart/barChart.less";
+@import "../components/dataTable/dataTable.less";
+@import "../components/databaseConfig/databaseConfig.less";
+@import "../components/filterBuilder/filterBuilder.less";
+@import "../components/filterTray/filterTray.less";
+@import "../components/ganttChart/ganttChart.less";
+@import "../components/import/import.less";
+@import "../components/lineChart/lineChart.less";
+@import "../components/map/map.less";
+@import "../components/networkGraph/networkGraph.less";
+@import "../components/newsFeed/newsFeed.less";
+@import "../components/opsClock/opsClock.less";
+@import "../components/opsClock/opsClockChart.less";
+@import "../components/poweredByNeon/poweredByNeon.less";
+@import "../components/sample/sample.less";
+@import "../components/scatterPlot/scatterPlot.less";
+@import "../components/sunburstChart/sunburstChart.less";
+@import "../components/textCloud/textCloud.less";
+@import "../components/timeline/timeline.less";
+@import "../components/timeline/timelineChart.less";
+@import "../components/translationOptions/translationOptions.less";
+@import "../components/visualizationWidget/visualizationWidget.less";
 /* endinjector */
