--- a/client/app/fonts.less
+++ b/client/app/fonts.less
@@ -17,31 +17,31 @@
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 300;
-    src:  url('../fonts/OpenSans-Light.eot');
-    src:     url('../fonts/OpenSans-Light.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/OpenSans-Light.woff') format('woff'),
-    url('../fonts/OpenSans-Light.ttf') format('truetype'),
-    url('../fonts/opensans-light-webfont.svg#open_sanslight') format('svg');
+    src:  url('../../assets/fonts/OpenSans-Light.eot');
+    src:     url('../../assets/fonts/OpenSans-Light.eot?#iefix') format('embedded-opentype'),
+    url('../../assets/fonts/OpenSans-Light.woff') format('woff'),
+    url('../../assets/fonts/OpenSans-Light.ttf') format('truetype'),
+    url('../../assets/fonts/opensans-light-webfont.svg#open_sanslight') format('svg');
 }
 @font-face {
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 400;
-    src:  url('../fonts/OpenSans-Regular.eot');
-    src:     url('../fonts/OpenSans-Regular.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/OpenSans-Regular.woff') format('woff'),
-    url('../fonts/OpenSans-Regular.ttf') format('truetype'),
-    url('../fonts/opensans-regular-webfont.svg#open_sansregular') format('svg');
+    src:  url('../../assets/fonts/OpenSans-Regular.eot');
+    src:     url('../../assets/fonts/OpenSans-Regular.eot?#iefix') format('embedded-opentype'),
+    url('../../assets/fonts/OpenSans-Regular.woff') format('woff'),
+    url('../../assets/fonts/OpenSans-Regular.ttf') format('truetype'),
+    url('../../assets/fonts/opensans-regular-webfont.svg#open_sansregular') format('svg');
 }
 @font-face {
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 700;
-    src:  url('../fonts/OpenSans-Bold.eot');
-    src:     url('../fonts/OpenSans-Bold.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/OpenSans-Bold.woff') format('woff'),
-    url('../fonts/OpenSans-Bold.ttf') format('truetype'),
-    url('../fonts/opensans-bold-webfont.svg#open_sansbold') format('svg');
+    src:  url('../../assets/fonts/OpenSans-Bold.eot');
+    src:     url('../../assets/fonts/OpenSans-Bold.eot?#iefix') format('embedded-opentype'),
+    url('../../assets/fonts/OpenSans-Bold.woff') format('woff'),
+    url('../../assets/fonts/OpenSans-Bold.ttf') format('truetype'),
+    url('../../assets/fonts/opensans-bold-webfont.svg#open_sansbold') format('svg');
 }
 
 // Better font rendering for Chrome
@@ -50,19 +50,19 @@
         font-family: 'Open Sans';
         font-style: normal;
         font-weight: 300;
-        src:     url('../fonts/opensans-light-webfont.svg#open_sanslight') format('svg');
+        src:     url('../../assets/fonts/opensans-light-webfont.svg#open_sanslight') format('svg');
     }
     @font-face {
         font-family: 'Open Sans';
         font-style: normal;
         font-weight: 400;
-        src:     url('../fonts/opensans-regular-webfont.svg#open_sansregular') format('svg');
+        src:     url('../../assets/fonts/opensans-regular-webfont.svg#open_sansregular') format('svg');
     }
     @font-face {
         font-family: 'Open Sans';
         font-style: normal;
         font-weight: 700;
-        src:  url('../fonts/opensans-bold-webfont.svg#open_sansbold') format('svg');
+        src:  url('../../assets/fonts/opensans-bold-webfont.svg#open_sansbold') format('svg');
     }
 
     /* Just for selects... */
@@ -70,28 +70,28 @@
         font-family: 'Open Sans Selects';
         font-style: normal;
         font-weight: 300;
-        src:  url('../fonts/OpenSans-Light.eot');
-        src:     url('../fonts/OpenSans-Light.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/OpenSans-Light.woff') format('woff'),
-        url('../fonts/OpenSans-Light.ttf') format('truetype');
+        src:  url('../../assets/fonts/OpenSans-Light.eot');
+        src:     url('../../assets/fonts/OpenSans-Light.eot?#iefix') format('embedded-opentype'),
+        url('../../assets/fonts/OpenSans-Light.woff') format('woff'),
+        url('../../assets/fonts/OpenSans-Light.ttf') format('truetype');
     }
     @font-face {
         font-family: 'Open Sans Selects';
         font-style: normal;
         font-weight: 400;
-        src:  url('../fonts/OpenSans-Regular.eot');
-        src:     url('../fonts/OpenSans-Regular.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/OpenSans-Regular.woff') format('woff'),
-        url('../fonts/OpenSans-Regular.ttf') format('truetype');
+        src:  url('../../assets/fonts/OpenSans-Regular.eot');
+        src:     url('../../assets/fonts/OpenSans-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../../assets/fonts/OpenSans-Regular.woff') format('woff'),
+        url('../../assets/fonts/OpenSans-Regular.ttf') format('truetype');
     }
     @font-face {
         font-family: 'Open Sans Selects';
         font-style: normal;
         font-weight: 700;
-        src:  url('../fonts/OpenSans-Bold.eot');
-        src:     url('../fonts/OpenSans-Bold.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/OpenSans-Bold.woff') format('woff'),
-        url('../fonts/OpenSans-Bold.ttf') format('truetype');
+        src:  url('../../assets/fonts/OpenSans-Bold.eot');
+        src:     url('../../assets/fonts/OpenSans-Bold.eot?#iefix') format('embedded-opentype'),
+        url('../../assets/fonts/OpenSans-Bold.woff') format('woff'),
+        url('../../assets/fonts/OpenSans-Bold.ttf') format('truetype');
     }
     select{
         font-family: "Open Sans Selects", Helvetica, arial, sans-serif !important;
