--- a/client/components/map/mapLayerOptions.html
+++ b/client/components/map/mapLayerOptions.html
@@ -35,7 +35,7 @@
     </div>
 </div>
 
-<div class="layer-options-row" ng-class="{true: 'row-large', false:''}[layer.type === CLUSTER_LAYER]">
+<div class="layer-options-row">
     <div class="form-group layer-options-col" ng-show="layer.type == NODE_AND_ARROW_LAYER">
         <label>Target Lat. Field</label>
         <select class="form-control" ng-cancel-drag ng-model="layer.targetLatitudeField" ng-options="field.prettyName for field in layer.fields" ng-required="(layer.type == NODE_AND_ARROW_LAYER)" ng-disabled="!(layer.fields.length > 0)" ng-change="validateLayerFields(layer)">
@@ -81,19 +81,9 @@
         <input type="text" class="form-control" placeholder="{{layer.colorCode || 'None'}}" ng-cancel-drag ng-model="layer.colorCode" ng-required="false">
     </div>
 
-    <div class="form-group layer-options-col" ng-show="layer.type == POINT_LAYER">
-        <label>Date Field</label>
-        <select class="form-control" ng-cancel-drag ng-model="layer.dateField" ng-options="field.prettyName for field in layer.fields" ng-required="false" ng-disabled="!(layer.fields.length > 0)">
-            <option value="">None</option>
-        </select>
-    </div>
-
-    <div class="form-group layer-options-col" ng-show="layer.type == CLUSTER_LAYER">
-        <label>Popup Fields</label>
-        <select class="form-control" ng-model="layer.popupFields"
-            ng-disabled="!(layer.fields.length > 0)" multiple>
-            <option ng-repeat="field in layer.fields" ng-cancel-drag value="{{field.columnName}}" ng-selected="{{layer.popupFields.indexOf(field.columnName) >= 0}}" ng-bind="field.prettyName">
-            </option>
+    <div class="form-group layer-options-col" ng-show="layer.type == POINT_LAYER || layer.type == CLUSTER_LAYER">
+        <label>ID Field</label>
+        <select class="form-control" ng-cancel-drag ng-model="layer.idField" ng-options="field.prettyName for field in layer.fields" ng-required="true" ng-disabled="!(layer.fields.length > 0)">
         </select>
     </div>
 
@@ -150,21 +140,34 @@
     </div>
 </div>
 
-<div class="layer-options-row" ng-show="layer.type == NODE_AND_ARROW_LAYER || layer.type == POINT_LAYER">
-    <div class="form-group layer-options-col" ng-show="layer.type == NODE_AND_ARROW_LAYER">
+<div class="layer-options-row" ng-class="{true: 'row-large', false:''}[layer.type === CLUSTER_LAYER]"
+    ng-show="layer.type == NODE_AND_ARROW_LAYER || layer.type == POINT_LAYER || layer.type == CLUSTER_LAYER">
+
+    <div class="form-group layer-options-col">
         <label>Date Field</label>
         <select class="form-control" ng-cancel-drag ng-model="layer.dateField" ng-options="field.prettyName for field in layer.fields" ng-required="false" ng-disabled="!(layer.fields.length > 0)">
             <option value="">None</option>
         </select>
     </div>
-    <div class="form-group layer-options-col" ng-show="layer.type == NODE_AND_ARROW_LAYER || layer.type == POINT_LAYER">
-    <label>Transient Date Filter</label>
-    <div class="btn-group">
-        <label class="btn btn-default" ng-class="{true: 'active', false: ''}[layer.applyTransientDateFilter]">
-            <input type="radio" style="display:none" ng-model="layer.applyTransientDateFilter" ng-value="true">On
-        </label>
-        <label class="btn btn-default" ng-class="{true: '', false: 'active'}[layer.applyTransientDateFilter]">
-            <input type="radio" style="display:none" ng-model="layer.applyTransientDateFilter" ng-value="false">Off
-        </label>
+
+    <div class="form-group layer-options-col">
+        <label>Transient Filter</label>
+        <div class="btn-group">
+            <label class="btn btn-default" ng-class="{true: 'active', false: ''}[layer.applyTransientDateFilter]">
+                <input type="radio" style="display:none" ng-model="layer.applyTransientDateFilter" ng-value="true">On
+            </label>
+            <label class="btn btn-default" ng-class="{true: '', false: 'active'}[layer.applyTransientDateFilter]">
+                <input type="radio" style="display:none" ng-model="layer.applyTransientDateFilter" ng-value="false">Off
+            </label>
+        </div>
+    </div>
+
+    <div class="form-group layer-options-col" ng-show="layer.type == CLUSTER_LAYER">
+        <label>Popup Fields</label>
+        <select class="form-control" ng-model="layer.popupFields"
+            ng-disabled="!(layer.fields.length > 0)" multiple>
+            <option ng-repeat="field in layer.fields" ng-cancel-drag value="{{field.columnName}}" ng-selected="{{layer.popupFields.indexOf(field.columnName) >= 0}}" ng-bind="field.prettyName">
+            </option>
+        </select>
     </div>
 </div>
